# PerfectForm

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: Enums.cpp  Enums.h  Exceptions.cpp  Exceptions.h  Game.cpp  Game.h  GlobalDefinitions.cpp  GlobalDefinitions.h  Object.cpp  Object.h  Player.cpp  Player.h  Scene.h  TextureManager.cpp  TextureManager.h  main.cpp
